feat: 스타트와 링크 int형 -> Integer형 변경